objects/ASI_CRM_Size__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_SG_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>ASI_CRM_Quality__c</referenceTo>
        <relationshipName>ASI_CRM_SG_Brand_Quality_Size</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Brand__c</fullName>
        <formula>ASI_CRM_SG_Brand_Quality__r.ASI_CRM_SG_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Size_Code__c</fullName>
        <label>Size Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Size_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Size_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Size_Packing_Description__c</fullName>
        <label>Packing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brand-Quality-Size</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand-Quality-Size Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand-Quality-Size</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Brand_Quality_Size</fullName>
        <active>true</active>
        <label>ASI CRM SG Brand Quality Size</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Brand_Quality_Size</fullName>
        <active>true</active>
        <label>ASI CRM TH Brand Quality Size</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Brand_Quality_Size</fullName>
        <active>true</active>
        <label>ASI CRM TW Brand Quality Size</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>